<resources>
    <string name="app_name">Notify</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="logo">Logo</string>
    <string name="phone_number_instruction">Enter 10 digit mobile number to verify.</string>
    <string name="country_code">+91</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="wrong_otp_entered">Wrong OTP entered !</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="existing_user">Existing user?</string>
    <string name="new_user">New user?</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="didn_t_recieve_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in">Resend OTP in %1$d seconds</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="avatar">Avatar</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="save">Save</string>
    <string name="country_code_drop_down">Country Code drop down</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="more">More</string>
    <string name="add_task">Add Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background_image">Background Image</string>
    <string name="description_placeholder">Add animated text. Use Flixier to make memes right in your web browser! …</string>
    <string name="time_placeholder">12:00 Am</string>
    <string name="heading_placeholder">App design in figma</string>
    <string name="place_holder_name">Name</string>
    <string name="dropdown">Dropdown icon</string>
    <string name="placeholder_email">name@example.com</string>
    <string name="important">Important</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="task_title">Title</string>
    <string name="start_typing">Start typing…</string>
    <string name="notes">Notes</string>
    <string name="back">back</string>
    <string name="task_name">Task Name</string>
    <string name="start_date">Start Date</string>
    <string name="_13_january_wednesday">13 January, Wednesday</string>
    <string name="end_date">End Date</string>
    <string name="description">Description</string>
    <string name="note_desc_placeholder">Add animated text. Use Flixier to make memes right in your web browser! Our online video.</string>
    <string name="error_message">Something went wrong! Try after some time.</string>
    <string name="auth_error_message">Something went wrong! Please sign in again.</string>
    <string name="no_account_error_message">Invalid email! Make an account instead.</string>
    <string name="choose_priority">Choose priority</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="critical">Critical</string>
    <string name="add_start_date">Add Start Date</string>
    <string name="add_end_date">Add end date</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="create_note">Create Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_task_message">Are you sure you want to delete this task?</string>
    <string name="task">Task</string>
    <string name="hii">Hi</string>
    <string name="create_your_first_note">Create your first Note!</string>
    <string name="create_your_first_task">Create your first Task!</string>
    <string name="add_note">Add Note</string>
    <string name="important_task_star">Important task star</string>
    <string name="dummy_number">+91 123456789</string>
    <string name="manage_account">Manage Account</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="use_my_system_theme">Use my system theme</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="help_n_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="get_support">Get support</string>
    <string name="faq">FAQ</string>
    <string name="suggest_feature">Suggest a feature</string>
    <string name="enjoy">Enjoying our app?</string>
    <string name="rate_it">Rate it</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="follow_twitter">Twitter</string>
    <string name="follow_facebook">Facebook</string>
    <string name="follow_instagram">Instagram</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="export_your_info">Export your info</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="deadline">Deadline:</string>
    <string name="dummy_date">Feb 17</string>
    <string name="logout">Logout</string>
    <string name="no_tasks">Nothing to show here…</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="_19">19</string>
    <string name="send_email">Send Email</string>
    <string name="reset_password_email_instruction">Enter your email address to send you a link to reset your password</string>
</resources>