<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatarIv"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                android:scaleType="centerCrop"
                android:contentDescription="@string/avatar"
                android:src="@drawable/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailOrPhoneTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/dummy_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/avatarIv"
                app:layout_constraintTop_toTopOf="@id/avatarIv" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/manageAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/manage_account"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/avatarIv"
                app:layout_constraintTop_toBottomOf="@id/emailOrPhoneTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/sign_out"
                android:textColor="@color/red"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/avatarIv"
                app:layout_constraintTop_toBottomOf="@id/manageAccountButton" />

            <View
                android:id="@+id/divider1"
                style="@style/Divider"
                android:layout_marginVertical="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signOutButton"
                app:layout_constraintBottom_toTopOf="@id/linearLayout" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1">
                <!-- Help and feedback -->

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/helpNFeedbackTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/help_n_feedback"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteY="326dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/getSupportTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/get_support"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/faqTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/faq"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/enjoyTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/enjoy"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rateTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/rate_it"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <View
                    style="@style/Divider"
                    android:layout_marginVertical="25dp"
                    app:layout_constraintBottom_toTopOf="@+id/connectTv"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <!-- Connect -->

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/connectTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:text="@string/follow_us_on"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/followTwitterTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/follow_twitter"
                    android:textColor="@color/blue_dark"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/followFacebookTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/follow_facebook"
                    android:textColor="@color/blue_dark"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/followInstagramTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/follow_instagram"
                    android:textColor="@color/blue_dark"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <View
                    style="@style/Divider"
                    android:layout_marginVertical="25dp"
                    app:layout_constraintBottom_toTopOf="@+id/aboutTv"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <!-- About -->

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/aboutTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/privacyPolicyTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exportYourInfoTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/export_your_info"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/versionTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/version"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>