<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatarIv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/hiiTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/hii"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/avatarIv"
        app:layout_constraintTop_toTopOf="@id/avatarIv"
        app:layout_constraintBottom_toBottomOf="@id/avatarIv" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/place_holder_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/hiiTv"
        app:layout_constraintTop_toTopOf="@id/avatarIv"
        app:layout_constraintBottom_toBottomOf="@id/avatarIv" />

    <TextView
        android:id="@+id/authTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/avatarIv"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/dropdown"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/outline_keyboard_arrow_down_24"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/dropdown"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>