<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="8dp"
    android:padding="6dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/taskTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/heading_placeholder"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskEndDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toStartOf="@id/taskEndDateTv"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:text="@string/time_placeholder" />

        <TextView
            android:id="@+id/taskDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskTitleTv"
            android:paddingHorizontal="16dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/description_placeholder"
            android:textSize="12sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>